--- a/admin/homepage.html
+++ b/admin/homepage.html
@@ -130,9 +130,9 @@
     <header>
         <h1>Telecom Inventory </h1>
         <nav>
-             <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+             <a href="homepage.html">Home</a>
+            <a href="aboutpage.html">Abou</a>
+            <a href="#">contact.html</a>
         
             
         </nav>
