--- a/admin/aboutpage.html
+++ b/admin/aboutpage.html
@@ -99,9 +99,10 @@
     <header>
         <h1>Telecom Inventory</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+          <a href="homepage.html">Home</a>
+            <a href="aboutpage.html">Abou</a>
+            <a href="contactpage.html">Contact</a>
+        
         </nav>
     </header>
     <div class="container">
