--- a/admin/contactpage.html
+++ b/admin/contactpage.html
@@ -90,7 +90,7 @@
         <h1>Telecom Inventory</h1>
         <nav>
             <a href="homepage.html">Home</a>
-            <a href="aboutpage.html">Abou</a>
+            <a href="aboutpage.html">About</a>
             <a href="contactpage.html">Contact</a>
         
         </nav>
