--- a/Staff Dashboard/product-stock.html
+++ b/Staff Dashboard/product-stock.html
@@ -3,76 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Stock</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <title>Product Search</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f9;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+            padding: 20px;
+            background: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        .form-group input, .form-group button {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .form-group button {
+            background-color: #007BFF;
+            color: white;
+            cursor: pointer;
+        }
+        .form-group button:hover {
+            background-color: #0056b3;
+        }
+        .product-details {
+            margin-top: 20px;
+        }
+        .product-details div {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Product Stock</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-danger" href="#">Logout</a>
-                    </li>
-                </ul>
+    <div class="container">
+        <h2>Product Search</h2>
+        <div class="form-group">
+            <label for="product-input">Enter Product Name or Details:</label>
+            <input type="text" id="product-input" placeholder="Product Name or Details">
+        </div>
+        <div class="form-group">
+            <button id="find-button">Find</button>
+        </div>
+        
+        <div id="product-details" class="product-details" style="display: none;">
+            <h3>Product Details</h3>
+            <div><strong>Product Name:</strong> <span id="product-name"></span></div>
+            <div><strong>Description:</strong> <span id="description"></span></div>
+            <div><strong>Product Image:</strong> <img id="product-image" alt="Product Image" style="max-width: 100px; display: block;"></div>
+            <div><strong>Category:</strong> <span id="category"></span></div>
+            <div><strong>Model Number:</strong> <span id="model-number"></span></div>
+            <div><strong>Serial Number:</strong> <span id="serial-number"></span></div>
+            <div><strong>Stock Level:</strong> <span id="stock-level"></span></div>
+            <div><strong>Reorder Point:</strong> <span id="reorder-point"></span></div>
+
+            <div class="form-group">
+                <label for="quantity">Quantity:</label>
+                <input type="number" id="quantity" min="1">
             </div>
-        </div>
-    </nav>
 
-    <div class="container mt-5">
-        <h1 class="dashboard-title text-center mb-4">Product Stock</h1>
-
-        <!-- Search Bar -->
-        <div class="mb-4">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search for a product..." onkeyup="filterStock()">
-        </div>
-
-        <!-- Product List -->
-        <div id="productList" class="list-group">
-            <!-- Dynamically populated list of products -->
+            <div class="form-group">
+                <button id="sell-button">Sell</button>
+            </div>
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
-
     <script>
-        // Sample product data
-        const products = [
-            { name: "Product 1", stock: 10 },
-            { name: "Product 2", stock: 5 },
-            { name: "Product 3", stock: 0 },
-            { name: "Product 4", stock: 20 },
-            { name: "Product 5", stock: 8 }
-        ];
+        document.getElementById('find-button').addEventListener('click', function() {
+            // Simulate finding the product details (replace this with actual logic)
+            const productDetails = {
+                productName: 'Sample Product',
+                description: 'This is a sample product description.',
+                productImage: 'https://via.placeholder.com/100',
+                category: 'Sample Category',
+                modelNumber: 'Model123',
+                serialNumber: 'SN123456',
+                stockLevel: 50,
+                reorderPoint: 10
+            };
 
-        // Function to display products
-        function displayProducts(filteredProducts) {
-            const productList = document.getElementById("productList");
-            productList.innerHTML = ""; // Clear previous list
-            filteredProducts.forEach(product => {
-                const productItem = document.createElement("a");
-                productItem.href = "#";
-                productItem.classList.add("list-group-item", "list-group-item-action");
-                productItem.innerHTML = `${product.name} - Stock: ${product.stock}`;
-                productList.appendChild(productItem);
-            });
-        }
+            // Populate the product details
+            document.getElementById('product-name').textContent = productDetails.productName;
+            document.getElementById('description').textContent = productDetails.description;
+            document.getElementById('product-image').src = productDetails.productImage;
+            document.getElementById('category').textContent = productDetails.category;
+            document.getElementById('model-number').textContent = productDetails.modelNumber;
+            document.getElementById('serial-number').textContent = productDetails.serialNumber;
+            document.getElementById('stock-level').textContent = productDetails.stockLevel;
+            document.getElementById('reorder-point').textContent = productDetails.reorderPoint;
 
-        // Filter products based on search query
-        function filterStock() {
-            const searchInput = document.getElementById("searchInput").value.toLowerCase();
-            const filteredProducts = products.filter(product => product.name.toLowerCase().includes(searchInput));
-            displayProducts(filteredProducts);
-        }
+            // Show the product details section
+            document.getElementById('product-details').style.display = 'block';
+        });
 
-        // Initially display all products
-        displayProducts(products);
+        document.getElementById('sell-button').addEventListener('click', function() {
+            const quantity = document.getElementById('quantity').value;
+            if (quantity) {
+                alert('Selling ' + quantity + ' units.');
+            } else {
+                alert('Please enter a quantity.');
+            }
+        });
     </script>
 </body>
 </html>
